...

        <!-- Google Sign In Button -->

        <!-- Divider -->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_calendar_signin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="#FFFFFA"
            android:text="Sign in to Google"
            android:textAllCaps="false"
...
